Change design pattern and file name

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 		</div>
 
 		<script src="jquery-2.1.4.min.js"></script>
-		<script src="script.js"></script>
+		<script src="gaonscroll.js"></script>
 	</body>
 </html>
